Fix possible overlapping icons in shelf on sync.

This fixes overlapping icons in shelf on sync, refactored pin applying
functionality.

BUG=649717
BUG=b/31632644
TEST=unit_tests
TEST=Manually on device, no glitches with shelf icon were found.

Review-Url: https://codereview.chromium.org/2364983002
Cr-Commit-Position: refs/heads/master@{#421613}

Former-commit-id: 57990fca3140d334ac17b2ba2c1412b5b51ee93d